# ukey-auth

./: .gitmodules  CMakeLists.txt  README.md
docs/: 文件指定授权软件.docx
docs/v0.2.2/: 文件授权管理软件 用户手册.docx  文件授权管理软件 设计说明书.docx
src/: CMakeLists.txt  admin_test.cpp  consts.h  crypto.cpp  crypto.def  crypto.h  crypto_test.cpp  device_monitor.cpp  device_monitor.h  device_monitor_test.cpp  local_auth.cpp  local_auth.h  local_auth_test.cpp  main.cpp  proto.cpp  proto.h  proto_test.cpp  publisher.cpp  single_process_instance.cpp  single_process_instance.h  single_process_instance_test.cpp  user.cpp  user_test.cpp  utils.cpp  utils.def  utils.h  utils_test.cpp
src/admin/: admin.qrc  admin_zh-cn.ts  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
src/protos/: index.proto  secret.proto
src/user/: main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  user.qrc  user_zh-cn.ts
